fix header colors

--- a/src/styles/base/_theme.scss
+++ b/src/styles/base/_theme.scss
@@ -8,12 +8,16 @@
     color: #01185D !important;
 } 
 
+
+
 .as-toolbar {
     border-bottom: 1px solid #01185D !important;
+    background-color: #fff !important;
 } 
 
 .as-toolbar__item {
     border-bottom: 1px solid #01185D !important;
+    background-color: #fff !important;
 } 
 
 .as-sidebar--right {
